[project]
name = "comfyui-string-tools"
description = "ComfyUI String Tools enhances prompt-building workflows by introducing dedicated text-handling nodes to ComfyUI. The extension includes simple and multiline string input nodes, powerful concatenation utilities, and both random and balanced choice selection tools for controlled prompt variation. Designed for users who need flexible, modular, and dynamic text operations within ComfyUI."
version = "0.0.4"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/Taremin/comfyui-string-tools"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Taremin/comfyui-string-tools/wiki"
"Bug Tracker" = "https://github.com/Taremin/comfyui-string-tools/issues"

[tool.comfy]
PublisherId = "taremin"
DisplayName = "comfyui-string-tools"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

